Implemented security jwt and ingredients